# GameEngine

./: CMakeLists.txt
lib/: entity.cpp  entity.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  window.cpp  window.h
src/: main.cpp
